Updated workflow to point to the right iris file, al.,so casted prediction type to an int in the feature wine
Co-Authored-By: Meroli00 <83272957+Meroli00@users.noreply.github.com>

--- a/.github/workflows/iris-daily-inference.yml
+++ b/.github/workflows/iris-daily-inference.yml
@@ -1,4 +1,4 @@
-name: wine-feature-pipeline-daily
+name: iris-inference-pipeline-daily
 
 on:
   workflow_dispatch:
@@ -25,4 +25,4 @@ jobs:
       - name: execute python workflows from bash script
         env: 
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
-        run: ./sh/run-wine-daily.sh
+        run: ./sh/run-iris-inference-daily.sh
