--- a/.github/workflows/iris-feature-daily.yml
+++ b/.github/workflows/iris-feature-daily.yml
@@ -25,4 +25,4 @@ jobs:
       - name: execute python workflows from bash script
         env: 
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
-        run: ./serverless-ml-intro/run-iris-daily.sh
+        run: ./sh/run-iris-daily.sh
